--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Zhaolin Yuan / Academic main page."
 title_separator          : "-"
 name                     : &name "Zhaolin YUan"
 description              : &description "Hello."
-url                      : https://y18810919727.github.io/yzl.academic.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://y18810919727.github.io/academic/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/y18810919727/academic.git"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
