--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhalin Yuan"
-  avatar           : "profile.png"
+  avatar           : "2cun.jpg"
   bio              : "Industrial AI researcher"
   location         : "Location"
   employer         :
