--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -31,6 +31,6 @@ jobs:
         # 此处可以键入邮箱及姓名
         git config --global user.email "you@example.com"
         git config --global user.name "Your Named"
-        git add diff.tex
+        git add -A
         git commit -m "update md files"
         git push -u origin master
