--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         conda install pytest
         conda install -c conda-forge pybtex
+        rm _publications/*
         cd markdown_generator
         python pubsFromBib.py
 
