debug archive single

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=PgM9DT8AAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "http://orcid.org/0000-0003-4119-7340"
+  orcid            : "https://orcid.org/0000-0001-5829-8952"
   semantic         : # URL
   ssrn             : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
